// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdDrbm sc-gtcAbF zEzNl cjJomP"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdDrbm sc-gtcAbF kFyyHK cjJomP"
>
  foo
</button>
`;
